@@ -7,5 +7,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="ttype"/>
     <field name="relation" expand="1"/>
     <field name="field_description" expand="1"/>
+    <field name="access"/>
     <field name="module"/>
 </tree>
