@@ -1,3 +1,4 @@
+* Add __access__ to Model
 * Add route wrapper to allow null origin
 * Add header grouping on report
 * Protect trusted devices against brute force attack
